[project]
name = "heatsource9"
version = "9.0.0b32"
description = "One-dimensional stream temperature modeling program"
readme = "README.md"
requires-python = ">=3.8, <4"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Matt Boyd"},
    {name = "Brian Kasper"},
    {name = "Terra Metta"},
    {name = "Ryan Michie"},
    {name = "Dan Turner"}
]
maintainers = [
  {name = "Ryan Michie", email = "ryan.michie@deq.oregon.gov"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    "Cython==3.1.4",
    "openpyxl <= 3.1.5"
]

[project.urls]
"Homepage" = "https://www.oregon.gov/deq/wq/tmdls/Pages/TMDLs-Tools.aspx"
"Documentation" = "https://www.oregon.gov/deq/FilterDocs/heatsourcemanual.pdf"
"Source" = "https://github.com/DEQrmichie/heatsource-9/"

[project.scripts]
hs = "heatsource9.__main__:main"

[build-system]
requires = ["setuptools>=77.0.3", "Cython==3.1.4"]
build-backend = "setuptools.build_meta"
